# generic-paint

./: .gitignore  .marprc.yml  README.md  README_DEAP.md  config.yaml  config_balanced.yaml  config_fast.yaml  create_evolution_gif.py  ga_clip_engine.py  ga_clip_engine_deap.py  main.py  package-lock.json  package.json  presentation.html  presentation.md  pyproject.toml  requirements.txt  talklog.txt  test_config.yaml  実験ログ.md  研究ノート.md
.claude/: settings.local.json
