[project]
name = "generic-paint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "imageio",
    "jupyter",
    "matplotlib",
    "nbconvert",
    "numpy>=1.21.0,<2.2.0",
    "pillow>=10.0.0",
    "plotly",
    "seaborn",
    "tqdm>=4.60.0",
    "transformers>=4.40.0",
    "uvicorn>=0.20.0",
    "pyyaml",
    "deap",
    "torch",
    "torchvision",
]
